fixed a overlap issue

--- a/src/pages/homePage/HomePage.css
+++ b/src/pages/homePage/HomePage.css
@@ -11,6 +11,7 @@
 .home {
     max-Height: 700px;
     padding: 10px;
+    z-index: 10;
 }
 .home> div {
     font-family: 'Open Sans', sans-serif;
@@ -81,7 +82,7 @@
     display: flex;
     flex-direction: column;
     font-family: 'Open Sans', sans-serif;
-
+    margin-top: 30px;
 }
 
 .bodyHomeBody {
